# tree-sitter-while

./: Cargo.toml  README.md  binding.gyp  dprint.json  grammar.js  package.json  sample.while  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/while/: highlights.scm
src/: grammar.json  node-types.json  parser.c
